# QuickKeys

./: .gitignore  LICENSE  README.md  build.bat  build.sh  main.py  pyproject.toml  quickkeys.spec  requirements.txt
.github/workflows/: build.yml
src/: app.py  clipboard.py  config.py  encryption.py  hotkeys.py  launcher.py  storage.py  tray.py
src/gui/: config_window.py  keybind_editor.py  master_password.py  password_generator.py  reset_password.py  theme.py
